--- a/Azure/OTEL/otel-deployment.yaml
+++ b/Azure/OTEL/otel-deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
       - name: otel-collector
         image: otel/opentelemetry-collector-contrib:latest
-        args:
+        command:
           - "--config=/etc/otel/config.yaml"
         ports:
           - name: otlp-grpc
