--- a/Azure/Bicep/azure-pipelines.yml
+++ b/Azure/Bicep/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - main
 
 variables:
-  resourceGroup: 'your-existing-rg-name'
+  resourceGroupName: 'your-existing-rg-name'
   factoryName: 'myADFFactory'
   location: 'eastus'    
 
